target/generated-sources/ant4/ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.7.2


#include "ExprVisitor.h"
#include "symbEntry.h"
#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ExprParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::Program_headerContext* ExprParser::ProgramContext::program_header() {
  return getRuleContext<ExprParser::Program_headerContext>(0);
}

ExprParser::DeclarationsContext* ExprParser::ProgramContext::declarations() {
  return getRuleContext<ExprParser::DeclarationsContext>(0);
}

ExprParser::Compound_statementContext* ExprParser::ProgramContext::compound_statement() {
  return getRuleContext<ExprParser::Compound_statementContext>(0);
}

tree::TerminalNode* ExprParser::ProgramContext::DOT() {
  return getToken(ExprParser::DOT, 0);
}


size_t ExprParser::ProgramContext::getRuleIndex() const {
  return ExprParser::RuleProgram;
}


antlrcpp::Any ExprParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgramContext* ExprParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    program_header();
    setState(113);
    declarations();
    setState(114);
    compound_statement();
    setState(115);
    match(ExprParser::DOT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Program_headerContext ------------------------------------------------------------------

ExprParser::Program_headerContext::Program_headerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Program_headerContext::PROGRAM() {
  return getToken(ExprParser::PROGRAM, 0);
}

tree::TerminalNode* ExprParser::Program_headerContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}

tree::TerminalNode* ExprParser::Program_headerContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}


size_t ExprParser::Program_headerContext::getRuleIndex() const {
  return ExprParser::RuleProgram_header;
}


antlrcpp::Any ExprParser::Program_headerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProgram_header(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Program_headerContext* ExprParser::program_header() {
  Program_headerContext *_localctx = _tracker.createInstance<Program_headerContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleProgram_header);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(ExprParser::PROGRAM);
    setState(118);
    match(ExprParser::IDENTIFIER);
    setState(119);
    match(ExprParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

ExprParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::ConstantsContext* ExprParser::DeclarationsContext::constants() {
  return getRuleContext<ExprParser::ConstantsContext>(0);
}

std::vector<tree::TerminalNode *> ExprParser::DeclarationsContext::SEMICOLON() {
  return getTokens(ExprParser::SEMICOLON);
}

tree::TerminalNode* ExprParser::DeclarationsContext::SEMICOLON(size_t i) {
  return getToken(ExprParser::SEMICOLON, i);
}

ExprParser::TypesContext* ExprParser::DeclarationsContext::types() {
  return getRuleContext<ExprParser::TypesContext>(0);
}

ExprParser::VariablesContext* ExprParser::DeclarationsContext::variables() {
  return getRuleContext<ExprParser::VariablesContext>(0);
}

ExprParser::FunctionsContext* ExprParser::DeclarationsContext::functions() {
  return getRuleContext<ExprParser::FunctionsContext>(0);
}


size_t ExprParser::DeclarationsContext::getRuleIndex() const {
  return ExprParser::RuleDeclarations;
}


antlrcpp::Any ExprParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::DeclarationsContext* ExprParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleDeclarations);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::CONST) {
      setState(121);
      constants();
      setState(122);
      match(ExprParser::SEMICOLON);
    }
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::TYPE) {
      setState(126);
      types();
      setState(127);
      match(ExprParser::SEMICOLON);
    }
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::VAR) {
      setState(131);
      variables();
      setState(132);
      match(ExprParser::SEMICOLON);
    }
    setState(139);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::FUNCTION

    || _la == ExprParser::PROCEDURE) {
      setState(136);
      functions();
      setState(137);
      match(ExprParser::SEMICOLON);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantsContext ------------------------------------------------------------------

ExprParser::ConstantsContext::ConstantsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ConstantsContext::CONST() {
  return getToken(ExprParser::CONST, 0);
}

ExprParser::Constant_listContext* ExprParser::ConstantsContext::constant_list() {
  return getRuleContext<ExprParser::Constant_listContext>(0);
}


size_t ExprParser::ConstantsContext::getRuleIndex() const {
  return ExprParser::RuleConstants;
}


antlrcpp::Any ExprParser::ConstantsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitConstants(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ConstantsContext* ExprParser::constants() {
  ConstantsContext *_localctx = _tracker.createInstance<ConstantsContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleConstants);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(141);
    match(ExprParser::CONST);
    setState(142);
    constant_list();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Constant_listContext ------------------------------------------------------------------

ExprParser::Constant_listContext::Constant_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::Constant_declarationContext *> ExprParser::Constant_listContext::constant_declaration() {
  return getRuleContexts<ExprParser::Constant_declarationContext>();
}

ExprParser::Constant_declarationContext* ExprParser::Constant_listContext::constant_declaration(size_t i) {
  return getRuleContext<ExprParser::Constant_declarationContext>(i);
}

std::vector<tree::TerminalNode *> ExprParser::Constant_listContext::SEMICOLON() {
  return getTokens(ExprParser::SEMICOLON);
}

tree::TerminalNode* ExprParser::Constant_listContext::SEMICOLON(size_t i) {
  return getToken(ExprParser::SEMICOLON, i);
}


size_t ExprParser::Constant_listContext::getRuleIndex() const {
  return ExprParser::RuleConstant_list;
}


antlrcpp::Any ExprParser::Constant_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitConstant_list(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Constant_listContext* ExprParser::constant_list() {
  Constant_listContext *_localctx = _tracker.createInstance<Constant_listContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleConstant_list);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(144);
    constant_declaration();
    setState(149);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(145);
        match(ExprParser::SEMICOLON);
        setState(146);
        constant_declaration(); 
      }
      setState(151);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Constant_declarationContext ------------------------------------------------------------------

ExprParser::Constant_declarationContext::Constant_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::Const_identifierContext* ExprParser::Constant_declarationContext::const_identifier() {
  return getRuleContext<ExprParser::Const_identifierContext>(0);
}

tree::TerminalNode* ExprParser::Constant_declarationContext::EQUAL() {
  return getToken(ExprParser::EQUAL, 0);
}

tree::TerminalNode* ExprParser::Constant_declarationContext::CHAR() {
  return getToken(ExprParser::CHAR, 0);
}

tree::TerminalNode* ExprParser::Constant_declarationContext::STRINGS() {
  return getToken(ExprParser::STRINGS, 0);
}

tree::TerminalNode* ExprParser::Constant_declarationContext::INTEGER() {
  return getToken(ExprParser::INTEGER, 0);
}

tree::TerminalNode* ExprParser::Constant_declarationContext::REAL() {
  return getToken(ExprParser::REAL, 0);
}

tree::TerminalNode* ExprParser::Constant_declarationContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}

tree::TerminalNode* ExprParser::Constant_declarationContext::BOOLEAN() {
  return getToken(ExprParser::BOOLEAN, 0);
}


size_t ExprParser::Constant_declarationContext::getRuleIndex() const {
  return ExprParser::RuleConstant_declaration;
}


antlrcpp::Any ExprParser::Constant_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitConstant_declaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Constant_declarationContext* ExprParser::constant_declaration() {
  Constant_declarationContext *_localctx = _tracker.createInstance<Constant_declarationContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleConstant_declaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    const_identifier();
    setState(153);
    match(ExprParser::EQUAL);
    setState(154);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::CHAR)
      | (1ULL << ExprParser::STRINGS)
      | (1ULL << ExprParser::BOOLEAN)
      | (1ULL << ExprParser::IDENTIFIER)
      | (1ULL << ExprParser::INTEGER)
      | (1ULL << ExprParser::REAL))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_identifierContext ------------------------------------------------------------------

ExprParser::Const_identifierContext::Const_identifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Const_identifierContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}


size_t ExprParser::Const_identifierContext::getRuleIndex() const {
  return ExprParser::RuleConst_identifier;
}


antlrcpp::Any ExprParser::Const_identifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitConst_identifier(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Const_identifierContext* ExprParser::const_identifier() {
  Const_identifierContext *_localctx = _tracker.createInstance<Const_identifierContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleConst_identifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    match(ExprParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesContext ------------------------------------------------------------------

ExprParser::TypesContext::TypesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::TypesContext::TYPE() {
  return getToken(ExprParser::TYPE, 0);
}

ExprParser::Type_listContext* ExprParser::TypesContext::type_list() {
  return getRuleContext<ExprParser::Type_listContext>(0);
}


size_t ExprParser::TypesContext::getRuleIndex() const {
  return ExprParser::RuleTypes;
}


antlrcpp::Any ExprParser::TypesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitTypes(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::TypesContext* ExprParser::types() {
  TypesContext *_localctx = _tracker.createInstance<TypesContext>(_ctx, getState());
  enterRule(_localctx, 14, ExprParser::RuleTypes);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    match(ExprParser::TYPE);
    setState(159);
    type_list();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_listContext ------------------------------------------------------------------

ExprParser::Type_listContext::Type_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::Type_declarationContext *> ExprParser::Type_listContext::type_declaration() {
  return getRuleContexts<ExprParser::Type_declarationContext>();
}

ExprParser::Type_declarationContext* ExprParser::Type_listContext::type_declaration(size_t i) {
  return getRuleContext<ExprParser::Type_declarationContext>(i);
}

std::vector<tree::TerminalNode *> ExprParser::Type_listContext::SEMICOLON() {
  return getTokens(ExprParser::SEMICOLON);
}

tree::TerminalNode* ExprParser::Type_listContext::SEMICOLON(size_t i) {
  return getToken(ExprParser::SEMICOLON, i);
}


size_t ExprParser::Type_listContext::getRuleIndex() const {
  return ExprParser::RuleType_list;
}


antlrcpp::Any ExprParser::Type_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitType_list(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Type_listContext* ExprParser::type_list() {
  Type_listContext *_localctx = _tracker.createInstance<Type_listContext>(_ctx, getState());
  enterRule(_localctx, 16, ExprParser::RuleType_list);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(161);
    type_declaration();
    setState(166);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(162);
        match(ExprParser::SEMICOLON);
        setState(163);
        type_declaration(); 
      }
      setState(168);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_declarationContext ------------------------------------------------------------------

ExprParser::Type_declarationContext::Type_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::Type_identifier_listContext* ExprParser::Type_declarationContext::type_identifier_list() {
  return getRuleContext<ExprParser::Type_identifier_listContext>(0);
}

tree::TerminalNode* ExprParser::Type_declarationContext::EQUAL() {
  return getToken(ExprParser::EQUAL, 0);
}

ExprParser::Type_specificationContext* ExprParser::Type_declarationContext::type_specification() {
  return getRuleContext<ExprParser::Type_specificationContext>(0);
}


size_t ExprParser::Type_declarationContext::getRuleIndex() const {
  return ExprParser::RuleType_declaration;
}


antlrcpp::Any ExprParser::Type_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitType_declaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Type_declarationContext* ExprParser::type_declaration() {
  Type_declarationContext *_localctx = _tracker.createInstance<Type_declarationContext>(_ctx, getState());
  enterRule(_localctx, 18, ExprParser::RuleType_declaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(169);
    type_identifier_list();
    setState(170);
    match(ExprParser::EQUAL);
    setState(171);
    type_specification();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_identifier_listContext ------------------------------------------------------------------

ExprParser::Type_identifier_listContext::Type_identifier_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::Type_identifierContext *> ExprParser::Type_identifier_listContext::type_identifier() {
  return getRuleContexts<ExprParser::Type_identifierContext>();
}

ExprParser::Type_identifierContext* ExprParser::Type_identifier_listContext::type_identifier(size_t i) {
  return getRuleContext<ExprParser::Type_identifierContext>(i);
}

std::vector<tree::TerminalNode *> ExprParser::Type_identifier_listContext::COMMA() {
  return getTokens(ExprParser::COMMA);
}

tree::TerminalNode* ExprParser::Type_identifier_listContext::COMMA(size_t i) {
  return getToken(ExprParser::COMMA, i);
}


size_t ExprParser::Type_identifier_listContext::getRuleIndex() const {
  return ExprParser::RuleType_identifier_list;
}


antlrcpp::Any ExprParser::Type_identifier_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitType_identifier_list(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Type_identifier_listContext* ExprParser::type_identifier_list() {
  Type_identifier_listContext *_localctx = _tracker.createInstance<Type_identifier_listContext>(_ctx, getState());
  enterRule(_localctx, 20, ExprParser::RuleType_identifier_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(173);
    type_identifier();
    setState(178);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::COMMA) {
      setState(174);
      match(ExprParser::COMMA);
      setState(175);
      type_identifier();
      setState(180);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_identifierContext ------------------------------------------------------------------

ExprParser::Type_identifierContext::Type_identifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Type_identifierContext::IDENTIFIER() {
  return getToken(ExprParser::IDENTIFIER, 0);
}


size_t ExprParser::Type_identifierContext::getRuleIndex() const {
  return ExprParser::RuleType_identifier;
}


antlrcpp::Any ExprParser::Type_identifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitType_identifier(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Type_identifierContext* ExprParser::type_identifier() {
  Type_identifierContext *_localctx = _tracker.createInstance<Type_identifierContext>(_ctx, getState());
  enterRule(_localctx, 22, ExprParser::RuleType_identifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(181);
    match(ExprParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_specificationContext ------------------------------------------------------------------

ExprParser::Type_specificationContext::Type_specificationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::SimpletypeContext* ExprParser::Type_specificationContext::simpletype() {
  return getRuleContext<ExprParser::SimpletypeContext>(0);
}

ExprParser::ArraytypeContext* ExprParser::Type_specificationContext::arraytype() {
  return getRuleContext<ExprParser::ArraytypeContext>(0);
}


size_t ExprParser::Type_specificationContext::getRuleIndex() const {
  return ExprParser::RuleType_specification;
}


antlrcpp::Any ExprParser::Type_specificationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitType_specification(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::Type_specificationContext* ExprParser::type_specification() {
  Type_specificationContext *_localctx = _tracker.createInstance<Type_specificationContext>(_ctx, getState());
  enterRule(_localctx, 24, ExprParser::RuleType_specification);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(185);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::CHAR:
      case ExprParser::BOOLEAN:
      case ExprParser::IDENTIFIER:
      case ExprParser::INTEGER: {
        enterOuterAlt(_localctx, 1);
        setState(183);
        simpletype();
        break;
      }

      case ExprParser::ARRAY: {
        enterOuterAlt(_localctx, 2);
        setState(184);
        arraytype();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpletypeContext ------------------------------------------------------------------
